# StudioOS

./: .env.example  .gitignore  .replit  404.html  CNAME  PRODUCTION.md  build-deploy.sh  build-pages.sh  cloudflare.toml  index.html  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  run-deploy.sh  wrangler.toml
_site/: index.xml  package-lock.json  package.json  pyproject.toml  replit.md
assets/: index-CEbQynfx.js
attached_assets/: Pasted--Backend-setup-on-Cloudflare-Workers-Python-FastAPI-is-_1776069620008.txt  Pasted--Best-and-safest-place-for-user-passports-and-IDs-KYC-A_1776547361244.txt  Pasted--Fresh-scan-completed-April-19-2026-The-GitHub-repo-htt_1776614607902.txt  Pasted--Fresh-scan-completed-April-19-2026-The-GitHub-repo-htt_1776617034809.txt  Pasted--Here-are-the-exact-configs-steps-you-need-before-promp_1776547888904.txt  Pasted--Here-are-the-exact-configs-you-need-before-prompting-R_1776546234614.txt  Pasted--Here-are-the-exact-configs-you-need-before-prompting-R_1776547201481.txt  Pasted--Here-are-the-exact-configs-you-need-before-prompting-R_1776547756166.txt  Pasted--Here-are-the-exact-configs-you-need-before-prompting-R_1776547771352.txt  Pasted--Here-are-the-exact-configs-you-need-for-Cloudflare-Dur_1776527749057.txt  Pasted--Here-are-the-exact-configs-you-need-for-Cloudflare-Que_1776527168176.txt  Pasted--Here-are-the-exact-configs-you-need-for-Cloudflare-Tur_1776527468895.txt  Pasted--Here-are-the-exact-configs-you-need-using-your-existin_1776528629042.txt  (+84 more)
backend/: seed.py
cloudflare-worker/: EMAIL-SETUP.md  (+9 more)
(+286 files in other folders)
